# Blur-Test

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  Report.md  blur.cu  flake.nix  main.cpp  profile.sh
docs/html/: blur_8cu.html  blur_8cu_source.html  files.html  formula.repository  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.html  main_8cpp_source.html  md_README.html  md_Report.html  pages.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  defines_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  pages_1.js  searchdata.js
docs/latex/: blur_8cu.tex  blur_8cu_source.tex  files.tex  header.tex  main_8cpp.tex  main_8cpp_source.tex  md_README.tex  md_Report.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
metrics/: metrics.ipynb  profile_cuda_1d_final.csv  profile_cuda_2d_final.csv  profile_multi_threaded.csv  profile_single_threaded.csv
